Split up models into separate scad/stl files

--- a/toy_train/Makefile
+++ b/toy_train/Makefile
@@ -1,11 +1,12 @@
-
 COMMON=track_common.scad
 
-PARTS=\
-	simple.stl
+# Every scad file except the common one is a part file...
+PARTS=$(shell ls *.scad | grep -v ${COMMON} | sed 's/scad/stl/')
+
 
 .PHONY: all
 all: ${PARTS}
+
 
 %.stl: %.scad ${COMMON}
 	openscad -o $@ $<
